# DevLog

./: .env  .env.example  .gitignore  DEPLOYMENT.md  README.md  db.sqlite3  pyproject.toml
blog/: admin.py  context_processors.py  forms.py  markdown_utils.py  models.py  search.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_comment_edited_at_comment_is_deleted.py  0004_category_tag_post_category_post_tags.py  0005_userprofile.py  0006_post_cover_image_post_likes.py
blog/templatetags/: blog_extras.py
django_blog_site/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
news/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
news/management/commands/: import_bg_news.py  seed_news_sources.py
news/migrations/: 0001_initial.py  0002_newssource_last_error_newssource_last_imported_at.py  0003_importedarticle_source_category.py  0004_importedarticle_full_text.py
news/services/: importer.py
static/css/: portal.css  tailwind.css
templates/: 404.html  500.html  base.html  demo_portal_django_adapted.html
templates/blog/: author_detail.html  comment_form.html  my_posts.html  post_confirm_delete.html  post_detail.html  post_form.html  post_form_modern_demo.html  post_list.html
templates/blog/partials/: comment.html  comment_create_response.html  comment_delete_response.html  comment_edit_form.html  comment_form.html  like_button.html
templates/news/: news_detail.html  news_list.html
templates/registration/: login.html  signup.html
