[project]
name = "django-blog-site"
version = "0.1.0"
description = ""
authors = [
    {name = "evgeni",email = "darmanchev.evgeni@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "django (>=6.0.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
