[project]
name = "django-blog-site"
version = "0.1.0"
description = ""
authors = [
    {name = "evgeni",email = "darmanchev.evgeni@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.0",
    "django (>=6.0.5,<7.0.0)",
    "feedparser>=6.0.12",
    "markdown>=3.10.2",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.2",
    "python-decouple>=3.8",
    "python-slugify>=8.0.4",
]

