[project]
name = "django-blog-site"
version = "0.1.0"
description = ""
authors = [
    {name = "evgeni",email = "darmanchev.evgeni@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bleach>=6.0",
    "celery-types>=0.26.0",
    "celery[redis]>=5.5",
    "django (>=6.0.5,<7.0.0)",
    "feedparser>=6.0.12",
    "markdown>=3.10.2",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.2",
    "python-decouple>=3.8",
    "python-slugify>=8.0.4",
    "readability-lxml>=0.8.4.1",
    "requests>=2.34.2",
]
